welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:1: error: Missing closing brace `}' assumed here
def nearTen(num:Int):Boolean = {
^